<?xml version="1.0"?>
<package format="2">
  <name>agitr</name>
  <version>0.1.0</version>
  <description>The agitr package</description>
  <maintainer email="liang.cao@live.com">liang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
